--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -1,4 +1,5 @@
-idf_component_register(SRCS "led.c" "buzzer.c" "uart.c"
+idf_component_register(SRCS "led.c" "buzzer.c" "uart.c" "wifi.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES "driver")
+                    REQUIRES "driver" "json"
+                    PRIV_REQUIRES nvs_flash)
 
