--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -1,5 +1,5 @@
-idf_component_register(SRCS "led.c" "buzzer.c" "uart.c" "wifi.c"
+idf_component_register(SRCS "led.c" "buzzer.c" "uart.c" "wifi.c" "mqtt.c"
                     INCLUDE_DIRS "include"
-                    REQUIRES "driver" "json"
+                    REQUIRES "driver" "json" "mqtt"
                     PRIV_REQUIRES nvs_flash)
 
